[RPP Observations] Prefix warning messages with warning icon
https://screenshot.googleplex.com/8zGux5ZqUS4PEVe

Bug: None
Change-Id: I94ccf6dfc025bdfdcaf2f40eeecc6f41c62b953d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6050443
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Adam Raine <asraine@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -280,6 +280,20 @@
 .field-data-warning {
   margin-top: 4px;
   color: var(--sys-color-error);
+  font-size: var(--sys-typescale-body4-size);
+  line-height: var(--sys-typescale-body4-line-height);
+  display: flex;
+
+  &::before {
+    content: " ";
+    width: var(--sys-typescale-body4-line-height);
+    height: var(--sys-typescale-body4-line-height);
+    mask-size: var(--sys-typescale-body4-line-height);
+    mask-image: var(--image-file-warning);
+    background-color: var(--sys-color-error);
+    margin-right: 4px;
+    flex-shrink: 0;
+  }
 }
 
 .collection-period-range {
