[RPP] Replace timings markers with new ones
This creates a new overlay for LCP, Nav, and FCP timings events as per
UI mocks. CLS and INP will be added on a follow-up.

This includes making these markers clickable, and hoverable with a
tooltip.

https://screencast.googleplex.com/cast/NTUwNjQ1Nzk0MzQwODY0MHw5NTExYWE1Zi0zYQ

Bug:374191612
Change-Id: I412f7fe896adf453b53efce7f41bb0dcf4c1307f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6001801
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -137,3 +137,37 @@
   bottom: 0;
   height: 100px;
 }
+
+.overlay-type-TIMINGS_MARKER {
+  bottom: 0;
+  width: 1px;
+  pointer-events: auto;
+}
+
+.marker-title {
+  display: flex;
+  justify-content: center;
+  width: var(--sys-size-13);
+  font-size: var(--sys-typescale-body4-size);
+  color: var(--sys-color-base);
+
+  &:hover {
+    cursor: default;
+    transition: opacity 0.2s ease;
+  }
+}
+
+.markers {
+  position: fixed;
+  display: flex;
+  bottom: 0;
+  width: 100%;
+}
+
+.overlay-popover span {
+  margin-right: var(--sys-size-3);
+}
+
+.overlay-popover span.overlay-popover-time {
+  color: var(--sys-color-green);
+}
