Use more specific selector for .toolbar in Lighthouse
Otherwise the selector is applied to panels outside of Lighthouse.
This is not a clean fix but gets the job done.

R=jacktfranklin@chromium.org

Fixed:367542098
Change-Id: I54475ba4f58b771e63e66287fb7bc1e6bb635a1b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6048861
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/lighthouse/lighthousePanel.css
+++ b/front_end/panels/lighthouse/lighthousePanel.css
@@ -4,11 +4,6 @@
  * found in the LICENSE file.
  */
 
-.toolbar {
-  background-color: var(--sys-color-cdt-base-container);
-  border-bottom: 1px solid var(--sys-color-divider);
-}
-
 .lh-root {
   --report-menu-width: 0;
 
@@ -45,6 +40,11 @@ button.view-trace {
 .lighthouse-toolbar-container {
   display: flex;
   flex: none;
+}
+
+.lighthouse-toolbar-container > .toolbar {
+  background-color: var(--sys-color-cdt-base-container);
+  border-bottom: 1px solid var(--sys-color-divider);
 }
 
 .lighthouse-toolbar-container > :first-child {
