Add whitespace to "Start new Chat" button to prevent overlap of focus ring
Fixed: 380812086
Change-Id: I03f4a546c2b236f9ea2af0d05042200653301513
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6049955
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -150,6 +150,10 @@
   padding-right: var(--sys-size-3);
 }
 
+.chat-inline-button {
+  padding-left: 3px;
+}
+
 .chat-cancel-context-button {
   padding-bottom: 3px;
   padding-right: var(--sys-size-3);
