[RPP Observations] Use list widget for origin mapping
Pros:
- Existing entries can be edited
- New entry values can be pre-filled
- Input fields can be validated individually
- Cancel button when adding/editing an entry
- Don't need to click "Ok" for changes to take affect

Cons:
- The header row is somewhat hacky
- No good way to check for CrUX data before an entry is added

Before:
https://screenshot.googleplex.com/AvRqQG9eHf35NBz

After:
https://screenshot.googleplex.com/6SbmNB9HgSi6Jq9

Bug: 362252927
Change-Id: Id0b5e0d266083d3aa4f8df1b23ef67154f459940
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5824581
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -51,7 +51,7 @@ details > summary {
 
 .content {
   max-width: 360px;
-  padding: 16px 20px 18px;
+  padding: 16px 4px 18px;
   box-sizing: border-box;
 }
 
@@ -63,6 +63,10 @@ details > summary {
 .origin-mapping-grid {
   border: 1px solid var(--sys-color-divider);
   margin-top: 8px;
+}
+
+.origin-mapping-description {
+  margin-bottom: 8px;
 }
 
 .origin-mapping-button-section {
