[RPP] Add passed insights section
https://screenshot.googleplex.com/6AtHW85oLmmiikh

- Rephrased viewport audit title and description to make sense when
  shown in the passed insights section.
- Several insights were not hiding empty sections because of
  limitations with the `:empty` CSS selector. These sections are now
  hidden via JS.

Bug: 369766999
Change-Id: I7c922e8337bf9eb1d2eec12fa2d6ddc25f626b34
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6052253
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/sidebarSingleInsightSet.css
+++ b/front_end/panels/timeline/components/sidebarSingleInsightSet.css
@@ -59,3 +59,11 @@
     padding: 0 1px;
   }
 }
+
+.passed-insights-section {
+  margin-top: var(--sys-size-5);
+
+  summary {
+    font-weight: var(--ref-typeface-weight-medium);
+  }
+}
