Change Workspace settings styles for subfolders
This introduces lines for separating subfolders and adjusts the padding.
We now also use a card color that is used in Chrome, instead of our
usual divider color.

Before: https://i.imgur.com/w2wSafX.png
After: https://i.imgur.com/824nykN.png
Bug: 325442387
Change-Id: Idcc4ed0694f6127763e13d56c51c64c08b0d9957
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6053930
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/models/persistence/editFileSystemView.css
+++ b/front_end/models/persistence/editFileSystemView.css
@@ -8,12 +8,9 @@
   display: flex;
   flex-direction: column;
   min-height: var(--sys-size-16);
-  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
-  padding: var(--sys-size-5) var(--sys-size-6);
-
-  & > .url-header {
-    height: var(--sys-size-9);
-  }
+  border-bottom: var(--sys-size-1) solid var(--app-color-card-divider);
+  padding: var(--sys-size-4) var(--sys-size-6);
+  gap: var(--sys-size-4);
 
   & > .excluded-folder-url {
     color: var(--sys-color-on-surface-subtle);
@@ -58,11 +55,19 @@
 }
 
 .list {
-  border: none;
+  &:has(div) {
+    border: none;
+  }
 }
 
 .list-item {
-  padding: 0 var(--sys-size-6);
+  padding-left: var(--sys-size-11);
+
+  &:not(:last-child) {
+    .file-system-list-item {
+      border-bottom: var(--sys-size-1) solid var(--app-color-card-divider);
+    }
+  }
 }
 
 .editor-buttons {
