Adjust multicolumn layout in Settings
This changes the behavior of the multi-column layout to adopt
the single column layout (centered) if there's only one column, and to
switch to using column layout if there's enough space.

Drive-by: Adopt new padding for select element and multicol layout
Screenshots: https://imgur.com/a/QyUODyY
Bug: 325442387
Change-Id: Ie1505f64cd95f8599d1ced05d9fb149497bf5bb7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6048829
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/sensors/locationsSettingsTab.css
+++ b/front_end/panels/sensors/locationsSettingsTab.css
@@ -73,7 +73,7 @@
 
 .settings-card-container-wrapper {
   scrollbar-gutter: stable;
-  padding-bottom: var(--sys-size-8);
+  padding: var(--sys-size-8) 0;
   overflow: auto;
   position: absolute;
   inset: var(--sys-size-8) 0 0;
