Fix line dividers in Shortcut settings
The lines were accidentally removed after https://crrev.com/c/6031271.
Re-introduce the lines, and adapt their color.

Drive-by: simplify the code and css surrounding the list

Before: https://i.imgur.com/aZHh6HA.png
After: https://i.imgur.com/RKUVXZ2.png
Fixed: 325442387
Change-Id: Iefa523d9300ce72eb4e0475e959cee46406a553c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6054009
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/settings/keybindsSettingsTab.css
+++ b/front_end/panels/settings/keybindsSettingsTab.css
@@ -28,11 +28,7 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 30px 2fr 30px 30px;
-  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
-
-  &:last-of-type {
-    border-bottom: unset;
-  }
+  border-top: var(--sys-size-1) solid var(--app-color-card-divider);
 }
 
 .keybinds-list-item:focus-visible {
@@ -107,13 +103,13 @@
   height: var(--sys-size-13);
   padding: var(--sys-size-4) var(--sys-size-7);
   white-space: nowrap;
+
+  + .keybinds-list-item-wrapper > .keybinds-list-item {
+    border-top: unset;
+  }
 }
 
-.keybinds-list-item-wrapper + .keybinds-header-wrapper {
-  margin-top: var(--sys-size-9);
-}
-
-.keybinds-list-item-wrapper:has(:not(.keybinds-category-header):hover),
+.keybinds-list-item-wrapper:has(.keybinds-list-item:hover),
 .keybinds-list-item-wrapper:has(
   .keybinds-list-item:not(.keybinds-editing)):focus-within {
   background: var(--sys-color-state-hover-on-subtle);
