Adjust paddings in Throttlings Settings
This fixes the paddings of the button in case the table is empty.

Before: https://i.imgur.com/ytbqSVL.png
After: https://i.imgur.com/YmoiDjy.png
Bug: 325442387
Change-Id: I83a0c853870696bf1c766a5ed08c73f4749454a7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6054010
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -5,13 +5,16 @@
  */
 
 .add-conditions-button {
-  margin-bottom: var(--sys-size-5);
+  margin: var(--sys-size-5) 0;
   border: none;
 }
 
 .conditions-list {
-  margin-top: var(--sys-size-3);
   flex: auto;
+
+  &:has(.list-item) {
+    margin-top: var(--sys-size-3);
+  }
 }
 
 .conditions-list-item {
