--- a/front_end/panels/timeline/components/ignoreListSetting.css
+++ b/front_end/panels/timeline/components/ignoreListSetting.css
@@ -3,7 +3,6 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
-
-:host {
-  white-space: normal;
+.ignore-list-setting-description {
+  margin-bottom: 5px;
 }
