[RPP Icicle blowtorch] Add `Remove` button for regex
The button will only shown when users hover the regex, and will when they click it, the regex will be removed.

Screencast: https://screenshot.googleplex.com/6d68wmZyeSXAvZH
Bug: 376658252
Change-Id: I3961f03324f3438a2b939baac98d2f71ca26abb7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6055039
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/components/ignoreListSetting.css
+++ b/front_end/panels/timeline/components/ignoreListSetting.css
@@ -6,3 +6,20 @@
 .ignore-list-setting-description {
   margin-bottom: 5px;
 }
+
+.regex-row {
+  display: flex;
+
+  /* The tag name of CheckboxLabel element */
+  dt-checkbox {
+    flex: auto;
+  }
+
+  devtools-button {
+    height: 24px;
+  }
+
+  &:not(:hover) devtools-button {
+    display: none;
+  }
+}
