--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -29,7 +29,7 @@
 .conditions-list-text {
   text-overflow: ellipsis;
   overflow: hidden;
-  flex: 0 0 50px;
+  flex: 0 0 60px;
   user-select: none;
   color: var(--sys-color-on-surface);
   text-align: center;
@@ -76,6 +76,10 @@
   display: flex;
   flex-direction: row;
   margin: 6px 5px;
+
+  .conditions-list-title-text {
+    white-space: unset;
+  }
 }
 
 .conditions-edit-row input {
@@ -95,10 +99,8 @@
 }
 
 .conditions-edit-optional {
-  position: absolute;
-  bottom: -20px;
-  right: 0;
-  color: var(--sys-color-state-disabled);
+  margin-top: var(--sys-size-5);
+  color: var(--sys-color-on-surface-subtle);
 }
 
 .editor-buttons {
