[M132] Change overflow style in Throttling settings page on edit
Before: https://i.imgur.com/YBfjk5t.png
After: https://i.imgur.com/PTXSIwY.png

Drive-by: Make 'optional' text below visible
Fixed: 381218238
Change-Id: I4cd952679a6929fc480f4cecaa2e36d5983991d1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6054263
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
(cherry picked from commit 9d043d24db143a4fcc5056c21db85617dc788f16)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6063483
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -26,7 +26,7 @@
 .conditions-list-text {
   text-overflow: ellipsis;
   overflow: hidden;
-  flex: 0 0 50px;
+  flex: 0 0 60px;
   user-select: none;
   color: var(--sys-color-on-surface);
   text-align: center;
@@ -73,6 +73,10 @@
   display: flex;
   flex-direction: row;
   margin: 6px 5px;
+
+  .conditions-list-title-text {
+    white-space: unset;
+  }
 }
 
 .conditions-edit-row input {
@@ -92,10 +96,8 @@
 }
 
 .conditions-edit-optional {
-  position: absolute;
-  bottom: -20px;
-  right: 0;
-  color: var(--sys-color-state-disabled);
+  margin-top: var(--sys-size-5);
+  color: var(--sys-color-on-surface-subtle);
 }
 
 .editor-buttons {
