Remove border from accessibility tree button
Screenshot: https://imgur.com/a/ZW1mkvu

Fixed: 381239218
Change-Id: I1eb80bbb27e84486552de3af9139a0a1f83cfa7e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6055028
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Peter Müller <petermueller@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/elements/elementsPanel.css
+++ b/front_end/panels/elements/elementsPanel.css
@@ -71,13 +71,13 @@ devtools-tree-outline {
 
 .axtree-button {
   position: absolute;
-  top: 16px;
-  right: 20px;
+  top: var(--sys-size-8);
+  right: var(--sys-size-9);
   background-color: var(--sys-color-cdt-base-container);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  border: 1px solid var(--sys-color-neutral-outline);
-  border-radius: 3px;
+  border-radius: var(--sys-shape-corner-full);
+  box-shadow: var(--sys-elevation-level1);
 }
