[AI assistant] Fix element picker focus ring
Drive-by: fix keyboard a11y

Screenshots: https://imgur.com/a/QBSg6As

Fixed: 381211953
Change-Id: I100a1d652fce70550e3f935d5178b57985a509c3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6054291
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -247,7 +247,7 @@
   .resource-link,
   .resource-task {
     cursor: pointer;
-    padding: var(--sys-size-2) var(--sys-size-4);
+    padding: var(--sys-size-2) 3px;
     font: var(--sys-typescale-body4-size);
     border: var(--sys-size-1) solid var(--sys-color-divider);
     border-radius: var(--sys-shape-corner-extra-small);
@@ -255,6 +255,14 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     max-width: var(--sys-size-32);
+
+    &.allow-overflow {
+      overflow: visible;
+    }
+
+    &:focus-visible {
+      outline: 2px solid var(--sys-color-state-focus-ring);
+    }
 
     .icon,
     devtools-file-source-icon {
