Fix function link focus outline in Performance>Summary
Screenshot: https://imgur.com/a/jUHmDOq

Bug: 376392418
Change-Id: I285be86c81858fb875760de8b9ddaff5e6a0663f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6063658
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -234,7 +234,7 @@
   display: inline-block;
   user-select: text;
   text-overflow: ellipsis;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .timeline-details-warning .timeline-details-view-row-value {
