RPP: Add outline to highlighted flamechart entries
To improve visual contrast, we add a 1px stroke on highlighted entries. See bug for demo videos.

This also lets us delete the slow searchResultHighlightElements DOM-based method entirely as we replace it with a visually consistent solution that's highly performant.

Drive-by: reduce border-width on ENTRY_OUTLINE from 2px to 1px. ENTRY_SELECTED border remains 2px.

Bug: 380038346
Change-Id: I96688218fbc25b2c7beac381e34a1ef2a166e684
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6069066
Auto-Submit: Paul Irish <paulirish@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -52,6 +52,7 @@
 
 .overlay-type-ENTRY_OUTLINE {
   background-color: transparent;
+  border-width: 1px;
 
   &.outline-reason-ERROR {
     border-color: var(--sys-color-error-bright);
@@ -74,7 +75,7 @@
       transparent var(--red-stripe-width),
       transparent var(--white-stripe-width)
     );
-  border: 2px solid var(--sys-color-error-bright);
+  border: 1px solid var(--sys-color-error-bright);
 
   &.cut-off-bottom {
     border-bottom: none;
