[RPP Icicle blowtorch] Show the invalid status of current input
Bug: 382272853
Change-Id: Ib759477c02d97503634732f14da9fc4b7cb60de8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6070382
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/components/ignoreListSetting.css
+++ b/front_end/panels/timeline/components/ignoreListSetting.css
@@ -30,4 +30,34 @@
   .new-regex-text-input {
     flex: auto;
   }
+
+  .harmony-input[type="text"] {
+    /* padding: 3px 6px; */
+    /* height: 24px; */
+    border: 1px solid var(--sys-color-neutral-outline);
+    border-radius: 4px;
+    outline: none;
+
+    &.error-input,
+    &:invalid {
+      border-color: var(--sys-color-error);
+    }
+
+    &:not(.error-input):not(:invalid):focus {
+      border-color: var(--sys-color-state-focus-ring);
+    }
+
+    &:not(.error-input):not(:invalid):hover:not(:focus) {
+      background: var(--sys-color-state-hover-on-subtle);
+    }
+  }
+}
+
+.input-validation {
+  /* 24px is the size of the checkbox, add this margin-left so the text can align with the input */
+  margin: 5px 0 5px 24px;
+
+  &.input-validation-error {
+    color: var(--sys-color-error);
+  }
 }
