--- a/front_end/panels/timeline/components/ignoreListSetting.css
+++ b/front_end/panels/timeline/components/ignoreListSetting.css
@@ -3,6 +3,10 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+.ignore-list-setting-content {
+  width: 280px;
+}
+
 .ignore-list-setting-description {
   margin-bottom: 5px;
 }
