[RPP] Ensure entry re-highlights after clearing selection
If the user clicks an entry with an ENTRY_OUTLINE overlay, it will be
replaced with a ENTRY_SELECTED overlay. However, if the selection is
cleared (e.g. clicking somewhere in blank space) the ENTRY_OUTLINE will
not immediately be restored.

This CL resolves the issue by keeping the original ENTRY_OUTLINE
rendered, and using CSS to ensure that the ENTRY_SELECTED overlay is
always rendered on top of it.

Bug: None
Change-Id: Ia5263089b0e00433e2c500643646bcff019fd5ef
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6084661
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -50,9 +50,16 @@
   }
 }
 
+.overlay-type-ENTRY_SELECTED {
+  /* Ensure ENTRY_SELECTED overlays are always displayed on top of ENTRY_OUTLINE overlays */
+  z-index: 1;
+}
+
 .overlay-type-ENTRY_OUTLINE {
   background-color: transparent;
   border-width: 1px;
+  /* Ensure ENTRY_SELECTED overlays are always displayed on top of ENTRY_OUTLINE overlays */
+  z-index: 0;
 
   &.outline-reason-ERROR {
     border-color: var(--sys-color-error-bright);
