[GM3Restyling] Update What's new Panel
Before: https://i.imgur.com/wNFNuxA.png
After: https://i.imgur.com/7i8c5Ub.png
Bug: 325441858
Change-Id: I6d0b9c1613d1c0766c04b535f027714769c1b2da
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6084417
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/components/markdown_view/markdownView.css
+++ b/front_end/ui/components/markdown_view/markdownView.css
@@ -26,7 +26,7 @@
 .message {
   line-height: 18px;
   font-size: 12px;
-  color: var(--override-markdown-view-message-color, --sys-color-token-subtle);
+  color: var(--sys-color-on-surface);
   user-select: text;
 }
 
