--- a/front_end/panels/whats_new/releaseNoteView.css
+++ b/front_end/panels/whats_new/releaseNoteView.css
@@ -4,118 +4,95 @@
  * found in the LICENSE file.
  */
 
-* {
-  box-sizing: border-box;
+.whatsnew {
+  padding: var(--sys-size-9) 0 0;
+  background: var(--sys-color-header-container);
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: var(--sys-size-9);
+
+  >* {
+    padding: 0 var(--sys-size-9);
+  }
 }
 
-.hbox {
-  overflow-y: auto;
-  overflow-x: hidden;
+.header {
   display: flex;
-  position: relative;
+  align-items: center;
+  font: var(--sys-typescale-headline4);
+
+  &::before {
+    content: "";
+    width: var(--sys-size-9);
+    height: var(--sys-size-9);
+    transform: scale(1.6);
+    margin: 0 var(--sys-size-8) 0 var(--sys-size-4);
+    background-image: var(--image-file-devtools);
+    mask-repeat: no-repeat;
+  }
+}
+
+.feature-container {
+  flex-grow: 1;
+  padding: 0;
+  background-color: var(--sys-color-surface);
+  border-radius: var(--sys-shape-corner-large) var(--sys-shape-corner-large) 0 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.feature {
+  background-color: var(--sys-color-surface3);
+  padding: 0 var(--sys-size-8) var(--sys-size-8);
+  border-radius: var(--sys-shape-corner-medium);
+  flex-shrink: 0;
+  margin: 0 var(--sys-size-9) var(--sys-size-9);
+}
+
+.video-container {
+  overflow: auto;
+  display: flex;
   flex-direction: row;
+  gap: var(--sys-size-5);
+  flex-shrink: 0;
+  padding: var(--sys-size-9) 0 var(--sys-size-3) var(--sys-size-9);
+  margin-bottom: var(--sys-size-8);
 }
 
-.release-note-top-section {
-  height: 27px;
-  line-height: 27px;
-  padding: 0 15px;
-  flex: none;
-  color: var(--sys-color-on-surface);
-  background-color: var(--sys-color-cdt-base-container);
-  border-bottom: 1px solid var(--sys-color-divider);
+.video {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  border-radius: var(--sys-shape-corner-medium);
+  background-color: var(--sys-color-surface3);
+  font: var(--sys-typescale-body5-regular);
+  min-width: var(--sys-size-29);
+  max-width: var(--sys-size-32);
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+  height: 72px;
 
-.release-note-container {
-  display: flex;
-  flex-direction: column;
-  min-width: 350px;
-}
+  &:hover {
+    box-shadow: var(--sys-elevation-level3);
+  }
 
-.release-note-container ul {
-  display: flex;
-  padding: 10px 16px;
-  flex-direction: column;
-  flex: none;
-  margin: 4px 12px 0 2px;
-  max-width: 600px;
-}
+  .thumbnail {
+    border-radius: var(--sys-shape-corner-medium) 0 0 var(--sys-shape-corner-medium);
+    flex-shrink: 0;
+  }
 
-.release-note-container li {
-  display: flex;
-  flex-direction: column;
-  flex: none;
-  line-height: 200%;
-  font-size: 14px;
-}
+  .thumbnail-description {
+    --description-margin: var(--sys-size-6);
 
-.release-note-container .release-note-link {
-  border: 1px solid var(--sys-color-divider);
-  padding-left: 8px;
-  padding-right: 8px;
-  margin-bottom: 4px;
-  text-decoration: none;
-  color: var(--sys-color-primary);
-}
-
-.release-note-container .release-note-link:hover {
-  box-shadow: 0 0 0 1px var(--box-shadow-outline-color) inset;
-}
-
-.release-note-title,
-.release-note-subtitle {
-  color: inherit;
-  text-decoration: none;
-}
-
-.release-note-subtitle {
-  font-size: 13px;
-  line-height: 125%;
-  padding-bottom: 8px;
-}
-
-devtools-button {
-  margin: 10px 0 20px 20px;
-}
-
-.release-note-container li:not(:hover) .release-note-subtitle {
-  color: var(--sys-color-token-subtle);
-}
-
-.release-note-image {
-  flex-shrink: 2;
-  margin: 30px 15px;
-  width: 260px;
-  height: 200px;
-}
-
-img {
-  width: 260px;
-  height: 200px;
-  flex: none;
-  box-shadow: var(--drop-shadow-depth-1);
-}
-
-img:hover {
-  box-shadow: var(--drop-shadow-depth-4);
+    margin: var(--description-margin);
+    height: calc(100% - var(--description-margin) * 2);
+    overflow: hidden;
+  }
 }
 
 @media (forced-colors: active) {
-  .release-note-container .release-note-link {
-    border-color: ButtonText;
-  }
-
-  .release-note-container .release-note-link:hover {
-    forced-color-adjust: none;
-    border-color: Highlight;
-  }
-
-  .release-note-container li .release-note-title,
-  .release-note-container li:not(:hover) .release-note-subtitle {
-    forced-color-adjust: none;
-    color: linktext;
+  .feature,
+  .video {
+    border: var(--sys-size-1) solid ButtonText;
   }
 }
