--- a/front_end/panels/whats_new/releaseNoteView.css
+++ b/front_end/panels/whats_new/releaseNoteView.css
@@ -29,7 +29,7 @@
     transform: scale(1.6);
     margin: 0 var(--sys-size-8) 0 var(--sys-size-4);
     background-image: var(--image-file-devtools);
-    mask-repeat: no-repeat;
+    flex-shrink: 0;
   }
 }
 
@@ -51,13 +51,26 @@
 }
 
 .video-container {
-  overflow: auto;
-  display: flex;
-  flex-direction: row;
-  gap: var(--sys-size-5);
-  flex-shrink: 0;
-  padding: var(--sys-size-9) 0 var(--sys-size-3) var(--sys-size-9);
-  margin-bottom: var(--sys-size-8);
+  margin-bottom: var(--sys-size-9);
+
+  &:has(.video) {
+    --video-bottom-padding: var(--sys-size-6);
+
+    overflow: auto;
+    display: flex;
+    flex-direction: row;
+    gap: var(--sys-size-5);
+    flex-shrink: 0;
+    padding: var(--sys-size-9) 0 var(--video-bottom-padding) var(--sys-size-9);
+
+    /* This extra margin makes sure that we have some space between
+       the scrollable container for videos and the cards below it. */
+    margin-bottom: calc(var(--sys-size-9) - var(--video-bottom-padding));
+
+    > * {
+      min-width: auto;
+    }
+  }
 }
 
 .video {
