Wrap experiment labels
Fixed: 383472408
Change-Id: I87233654bb47687cd2341907462bd3162124215b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6091351
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/settings/settingsScreen.css
+++ b/front_end/panels/settings/settingsScreen.css
@@ -145,7 +145,8 @@ devtools-button.link-icon {
 }
 
 .experiment-label {
-  margin-right: 2px;
+  margin: var(--sys-size-3) var(--sys-size-2) var(--sys-size-3) 0;
+  white-space: normal;
 }
 
 .settings-experiment-unstable {
