Update text selection color
Before: https://i.imgur.com/HjRVc1j.png
After: https://i.imgur.com/3mo4O7P.png
Bug: 377642751, 382208254
Change-Id: I40d3948ccd27bf1dce0de1a7120bacf8b3403c26
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6097453
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -564,7 +564,8 @@ span[is="dt-icon-label"] {
 }
 
 ::selection {
-  background-color: var(--sys-color-tonal-container);
+  background-color: var(--sys-color-state-text-highlight);
+  color: var(--sys-color-state-on-text-highlight);
 }
 
 button.link {
