[GM3Restyling] Update the dialog's header/buttons row
Also added more example in components server
See design here: https://www.figma.com/design/A5iQBBNAe5zPFpJvUzUgW8/Chrome-DevTools-Design-Kit?node-id=3653-3002&m=dev

Bug: 383278166
Change-Id: Iac70968af04b967ae5ec1f5bce0fe04b37096fa3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6084416
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/components/dialogs/dialog.css
+++ b/front_end/ui/components/dialogs/dialog.css
@@ -55,14 +55,19 @@ dialog:focus-visible {
   justify-content: space-between;
   align-items: center;
   padding: var(--sys-size-5) var(--sys-size-5) var(--sys-size-5) var(--sys-size-8);
-}
 
-.dialog-header-text {
-  font: var(--sys-typescale-body2-medium);
+  &:empty {
+    padding: 0;
+    height: var(--sys-size-7);
+  }
+
+  .dialog-header-text {
+    font: var(--sys-typescale-body2-medium);
+  }
 }
 
 .dialog-content {
-  padding: 0 var(--sys-size-8);
+  padding: 0 0 var(--sys-size-7);
   overflow: hidden;
 }
 
