[RPP] Add minimal Node specific landing page
https://screenshot.googleplex.com/5tCR9VaQoZ2KDje

Bug: 381886477
Change-Id: I3f728c1e524a3ccf3a45b8e46be5f3ffec2df997
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6094763
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -365,3 +365,28 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   text-decoration: underline;
   cursor: pointer;
 }
+
+.node-view {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: var(--sys-typescale-body4-size);
+  line-height: var(--sys-typescale-body4-line-height);
+  font-weight: var(--ref-typeface-weight-regular);
+  user-select: text;
+
+  main {
+    width: 300px;
+    max-width: 100%;
+    text-align: center;
+
+    .section-title {
+      margin-bottom: 4px;
+    }
+  }
+}
+
+.node-description {
+  margin-bottom: 12px;
+}
