[AI Settings] Show multiple disable-reasons
Screenshot: https://i.imgur.com/6BvvIdF.png

Bug: 381127660
Change-Id: I09f9254712df8ab786501cba88ccb1e8e1231f10
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6097498
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/settings/aiSettingsTab.css
+++ b/front_end/panels/settings/aiSettingsTab.css
@@ -172,14 +172,18 @@ header {
 }
 
 .disabled-explainer {
-  display: flex;
-  gap: var(--sys-size-6);
   background-color: var(--sys-color-surface-yellow);
   border-radius: var(--sys-shape-corner-medium-small);
   margin-top: var(--sys-size-11);
-  padding: var(--sys-size-8) var(--sys-size-11);
+  padding: var(--sys-size-6) var(--sys-size-11) var(--sys-size-8);
   width: 100%;
   max-width: var(--sys-size-35);
   min-width: var(--sys-size-28);
   color: var(--sys-color-yellow);
+}
+
+.disabled-explainer-row {
+  display: flex;
+  gap: var(--sys-size-6);
+  margin-top: var(--sys-size-4);
 }
