--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -16,13 +16,6 @@ devtools-dialog {
   --override-transparent: color-mix(in sRGB, var(--color-background) 80%, transparent);
 }
 
-.title {
-  font-size: var(--sys-typescale-headline4-size);
-  line-height: var(--sys-typescale-headline4-line-height);
-  font-weight: var(--ref-typeface-weight-medium);
-  margin: 0;
-}
-
 .section-title {
   font-size: var(--sys-typescale-headline5-size);
   line-height: var(--sys-typescale-headline5-line-height);
@@ -51,7 +44,7 @@ details > summary {
 
 .content {
   max-width: 360px;
-  padding: 16px 4px 18px;
+  padding: 0 var(--sys-size-8) var(--sys-size-2);
   box-sizing: border-box;
 }
 
@@ -73,7 +66,7 @@ details > summary {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 6px;
+  margin-top: var(--sys-size-6);
 }
 
 .config-button {
